feat: 生成行程调整代码